--- a/index.html
+++ b/index.html
@@ -17,7 +17,18 @@
 </head>
 
 <body>
-
+    <header>
+        <nav class="nav-bar">
+            <div>
+                <img class="logo" src="./img/logo.png" alt="logo img">
+            </div>
+            <ul class="nav-list">
+                <li><a href="/">Home</a></li>
+                <li><a href="/">Contact us</a></li>
+                <a class="btn" href="/">DONATE</a>
+            </ul>
+        </nav>
+    </header>
 </body>
 
 </html>
