--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <ul class="nav-list">
                 <li><a href="/">Home</a></li>
                 <li><a href="/">Contact us</a></li>
-                <a class="btn" href="/">DONATE</a>
+                <a class="btn" href="/">DONATE <i class="fa-solid fa-arrow-right"></i></a>
             </ul>
         </nav>
     </header>
