Update styling for homepage

--- a/index.html
+++ b/index.html
@@ -18,6 +18,21 @@
 
 <body>
     <header>
+
+        <div class="navbar">
+            <div class="logo">
+                <img src="./img/logo.png" alt="Logo">
+            </div>
+            <div class="icon open"><i class="fa-solid fa-bars-staggered"></i></div>
+            <ul class="nav-list">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Contact</a></li>
+                <a href="/">Donate</a>
+            </ul>
+            <div class="icon close"><i class="fa-solid fa-xmark"></i></div>
+        </div>
+
+
         <nav class="nav-bar">
             <div>
                 <img class="logo" src="./img/logo.png" alt="logo img">
@@ -28,7 +43,33 @@
                 <a class="btn" href="/">DONATE <i class="fa-solid fa-arrow-right"></i></a>
             </ul>
         </nav>
+
+        <div class="hero">
+            <div class="hero_text">
+                <h1> Empowering <span>vulnerable children</span> to become<br> exemplary <span>leaders in society</span>
+                </h1>
+                <p>Through diverse artistic channels such as music, painting, and other creative <br>avenues, we inspire
+                    and
+                    train these young minds to unlock their full potential</p>
+                <div class="btn">
+                    <button><a href="/">Donate</a></button>
+                    <button><a href="/">Learn More</a></button>
+                </div>
+
+            </div>
+            <div class="hero_img">
+                <img src="./img/hero.png" alt="hero image" srcset="">
+            </div>
+        </div>
     </header>
+
+
+
+
+
+    <script>
+
+    </script>
 </body>
 
 </html>
