--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
                     and
                     train these young minds to unlock their full potential</p>
                 <div class="btn">
-                    <button><a href="/">Donate</a></button>
+                    <button><a href="/">Donate <i class="fa-solid fa-arrow-right"></i></a></button>
                     <button><a href="/">Learn More</a></button>
                 </div>
 
             </div>
             <div class="hero_img">
-                <img src="./img/hero.png" alt="hero image" srcset="">
+                <img src="./img/hero1.png" alt="hero image" srcset="">
             </div>
         </div>
     </header>
