"Update structure for homepage index

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                     and
                     train these young minds to unlock their full potential</p>
                 <div class="btn">
-                    <button><a href="/">Donate <i class="fa-solid fa-arrow-right"></i></a></button>
-                    <button><a href="/">Learn More</a></button>
+                    <a class="btn-1" href="/">Donate <i class="fa-solid fa-arrow-right"></i></a>
+                    <a class="btn-2" href="/">Learn More</a>
                 </div>
 
             </div>
@@ -63,7 +63,9 @@
         </div>
     </header>
 
-
+    <main>
+        <section></section>
+    </main>
 
 
 
