--- a/index.html
+++ b/index.html
@@ -55,7 +55,31 @@
     </header>
 
     <main>
-        <section></section>
+        <section class="illuminating">
+            <div class="illuminating-1">
+                <div class="illuminating-1-a">
+                    <h2>Paint the World: <span>
+                            Illuminating <br> Futures through Artistry
+                        </span> </h2>
+                </div>
+                <div class="illuminating-1-b">
+                    <img src="./img/p1.png" alt="image">
+                </div>
+            </div>
+            <div class="illuminating-1">
+                <div class="illuminating-1-a">
+                    <p>Welcome to "Paint the World," a ground breaking international initiative founded by the
+                        visionary artist and musician, Mâat Mugabo. As the luminary behind this transformative project,
+                        Mâat brings together a fusion of artistic disciplines, including music, painting, and various
+                        creative realms, to impact the lives of vulnerable children and mold the mind of future leaders.
+                    </p>
+                </div>
+                <div class="illuminating-1-b">
+                    <img src="./img/p1.png" alt="image">
+                </div>
+            </div>
+
+        </section>
     </main>
 
 
