new ssection add; about section

--- a/index.html
+++ b/index.html
@@ -70,6 +70,56 @@
                 <img src="./img/p1.png" alt="image">
             </div>
         </section>
+        <section class="about">
+            <div class="about-1">
+                <div class="about-1_a">
+                    <div class="about-1_a-i">
+                        <h3>
+                            Mission and Ethics
+                        </h3>
+                        <p>At the heart of our endeavour is the unwavering commitment to infuse vibrant colors into the
+                            lives of those who need it the most. "Bringing Vibrant Colors to Life" isn't just a
+                            motto—it's a philosophy that drives every facet of Paint the World's mission. We believe in
+                            the power of the arts to transcend barriers, instil confidence, and foster leadership
+                            qualities among the young minds we engage.</p>
+                    </div>
+                    <div class="about-1_a-ii">
+                        <h3>Artistic Empowerment</h3>
+                        <p>
+                            Our multifaceted approach encompasses music, painting, and other artistic avenues. By
+                            providing these children with the tools and guidance to express themselves through
+                            creativity, we unlock their inherent potential. Mâat Mugabo, as the project's founder,
+                            brings a wealth of experience as an artist, musician, singer, songwriter, and pianist,
+                            offering a rich tapestry of artistic influence to inspire and guide our participants.
+                        </p>
+                    </div>
+                </div>
+                <div class="about-1_a">
+                    <div class="about-1_a-i">
+                        <h3>International Reach</h3>
+                        <p>
+                            Paint the World operates on a global scale, currently making a profound impact in two East
+                            African countries—the Democratic Republic of Congo and Kenya. This international scope
+                            enables us to create across-cultural exchange of ideas, fostering a rich tapestry of
+                            experiences that transcends borders and enriches the lives of children in diverse
+                            communities.
+                        </p>
+                    </div>
+                    <div class="about-1_a-ii">
+                        <h3>
+                            Social Impact
+                        </h3>
+                        <p>Our focus extends beyond artistic expression; we are dedicated to nurturing these young
+                            talents into compassionate and capable leaders. By instilling values of empathy, resilience,
+                            and creativity, Paint the World envisions a future where the children we engage become
+                            catalysts for positive change in their communities. </p>
+                    </div>
+                </div>
+            </div>
+            <div class="about-2">
+                <img src="./img/p2.png" alt="">
+            </div>
+        </section>
     </main>
 
 
