--- a/index.html
+++ b/index.html
@@ -120,6 +120,25 @@
                 <img src="./img/p2.png" alt="">
             </div>
         </section>
+        <ssection class="movement">
+            <div class="movement-a">
+                <h2>
+                    Join the Movement
+                </h2>
+                <p>Paint the World invites you to join this transformative movement. Whether you are an artist,
+                    philanthropist, or supporter of the arts, your involvement can make a lasting impact. Together,
+                    let's paint a brighter, more colourful future for the next generation</p>
+            </div>
+            <div class="movement-b">
+                <button class="cta-1">JOIN AS A PHILANTHROPIST <i class="fa-solid fa-arrow-right"></i></button>
+
+                <button class="cta-2">JOIN AS AN ARTIST OR SUPPORTER</button>
+
+
+
+
+            </div>
+        </ssection>
     </main>
 
 
