structuring the footer

--- a/index.html
+++ b/index.html
@@ -140,6 +140,38 @@
             </div>
         </ssection>
     </main>
+    <footer>
+        <img src="./img/logo.png" alt="image">
+        <div class="footer-list">
+            <a href="/">Home</a>
+            <a href="/">Contact us</a>
+            <a class="btn4" href="/">Donate <i class="fa-solid fa-arrow-right"></i></a>
+        </div>
+        <div class="footer-conatct">
+            <div class="footer-contact_1">
+                <i class="fa-solid fa-phone"></i>
+                <h1>
+                    phone number <br> <span>+254748515500</span>
+                </h1>
+            </div>
+            <div class="footer-contact_1">
+                <i class="fa-solid fa-envelope"></i>
+                <h1>
+                    Email Address <br><span>painttheworld2000@gmail.com</span>
+                </h1>
+            </div>
+        </div>
+        <div class="footer-social">
+            <a href="/">
+                <i class="fa-brands fa-youtube"></i>
+            </a>
+            <a href="/">
+                <i class="fa-brands fa-facebook"></i>
+            </a>
+        </div>
+
+
+    </footer>
 
 
 
