linking the contact page to the home page

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                     <span class="line line3"></span>
                 </div>
                 <ul class="menu-items">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Contact us</a></li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="./contact.html">Contact us</a></li>
                     <a class="btn2" href="/">Donate <i class="fa-solid fa-arrow-right"></i></a>
                 </ul>
                 <img class="logo" src="./img/logo.png" alt="">
