--- a/contact.html
+++ b/contact.html
@@ -44,6 +44,29 @@
     </header>
 
     <main>
+        <div class="contactUs">
+            <h1>Contact Us</h1>
+            <div class="contactUs-box">
+                <div class="contactUs-box_1">
+                    <i class="fa-solid fa-phone"></i>
+                    <h1>
+                        Phone Number
+                        <br><span>
+                            +254748515500
+                        </span>
+                    </h1>
+                </div>
+                <div class="contactUs-box_1">
+                    <i class="fa-solid fa-envelope"></i>
+                    <h1>
+                        Email Address
+                        <br><span>
+                            painttheworld2000@gmail.com
+                        </span>
+                    </h1>
+                </div>
+            </div>
+        </div>
 
     </main>
     <footer>
