--- a/contact.html
+++ b/contact.html
@@ -68,6 +68,29 @@
             </div>
         </div>
 
+        <section class="contact-form">
+            <h2> <span class="span1">
+                    If you have any question,
+                </span>
+                <span class="span2"> please do not hesitate to send Alex a message</span>
+            </h2>
+
+            <form action="#" method="POST">
+
+                <input type="Your name" id="name" name="name" placeholder="Your name" required>
+
+
+                <input type="Your email" id="name" name="name" placeholder="Your email" required>
+
+
+                <input type="Your phone" id="name" name="name" placeholder="Your phone" required>
+
+
+                <textarea id="comments" name="comments" rows="4" cols="50" placeholder="Your message"></textarea>
+
+                <button type="submit">Submit</button>
+            </form>
+        </section>
     </main>
     <footer>
         <img src="./img/logo.png" alt="image">
