--- a/contact.html
+++ b/contact.html
@@ -84,10 +84,6 @@
                 <label for="Email">Email</label>
                 <input type="Your email" id="name" name="name" placeholder="e.g johndoe@gmail.com" required>
 
-                <!-- 
-                <input type="Your phone" id="name" name="name" placeholder="Your phone" required> -->
-
-
                 <textarea id="comments" name="comments" rows="4" cols="50"
                     placeholder="Your message goes here..."></textarea>
 
@@ -98,8 +94,8 @@
     <footer>
         <img src="./img/logo.png" alt="image">
         <div class="footer-list">
-            <a href="/">Home</a>
-            <a href="/">Contact us</a>
+            <a href="./index.html">Home</a>
+            <a href="./contact.html">Contact us</a>
             <a class="btn4" href="/">Donate <i class="fa-solid fa-arrow-right"></i></a>
         </div>
         <div class="footer-conatct">
