--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
     <footer>
         <img src="./img/logo.png" alt="image">
         <div class="footer-list">
-            <a href="/">Home</a>
-            <a href="/">Contact us</a>
+            <a href="./index.html">Home</a>
+            <a href="./contact.html">Contact us</a>
             <a class="btn4" href="/">Donate <i class="fa-solid fa-arrow-right"></i></a>
         </div>
         <div class="footer-conatct">
