add links to the icon

--- a/contact.html
+++ b/contact.html
@@ -113,10 +113,10 @@
             </div>
         </div>
         <div class="footer-social">
-            <a href="/">
+            <a href="https://www.youtube.com/@PaintTheworld-pg7zy">
                 <i class="fa-brands fa-youtube"></i>
             </a>
-            <a href="/">
+            <a href="https://www.facebook.com/profile.php?id=100064051814482&mibextid=ZJZnRZ3J6AsJ4wuB">
                 <i class="fa-brands fa-facebook"></i>
             </a>
         </div>
