final commit for now

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <ul class="menu-items">
                     <li><a href="/">Home</a></li>
                     <li><a href="./contact.html">Contact us</a></li>
-                    <a class="btn2" href="/">Donate <i class="fa-solid fa-arrow-right"></i></a>
+                    <a class="btn2 open-popup">Donate <i class="fa-solid fa-arrow-right"></i></a>
                 </ul>
                 <img class="logo" src="./img/logo.png" alt="">
             </div>
@@ -43,7 +43,7 @@
                     and
                     train these young minds to unlock their full potential</p>
                 <div class="btn">
-                    <a class="btn-1" href="/">Donate <i class="fa-solid fa-arrow-right"></i></a>
+                    <a class="btn-1 open-popup">Donate <i class="fa-solid fa-arrow-right"></i></a>
                     <a class="btn-2" href="/">Learn More</a>
                 </div>
 
@@ -145,7 +145,7 @@
         <div class="footer-list">
             <a href="./index.html">Home</a>
             <a href="./contact.html">Contact us</a>
-            <a class="btn4" href="/">Donate <i class="fa-solid fa-arrow-right"></i></a>
+            <a class="btn4 open-popup">Donate <i class="fa-solid fa-arrow-right"></i></a>
         </div>
         <div class="footer-conatct">
             <div class="footer-contact_1">
@@ -170,9 +170,33 @@
             </a>
         </div>
 
-
     </footer>
 
+
+
+    <!-- popup=================== -->
+    <!-- popup=================== -->
+    <!-- popup=================== -->
+    <!-- popup=================== -->
+    <!-- popup=================== -->
+    <!-- popup=================== -->
+    <!-- popup=================== -->
+    <!-- popup=================== -->
+    <!-- popup=================== -->
+    <!-- popup=================== -->
+    <!-- popup=================== -->
+    <!-- popup=================== -->
+    <!-- popup=================== -->
+    <div id="popup" class="popup">
+        <div class="popup-content">
+            <img src="./img/paypal.png" alt="paypal logo">
+            <button class="close-button close-popup">&times;</button>
+            <p>To support the work we are doing, you can put a <br>smile on a child’s face through our PayPal account
+            </p>
+            <button type="button" id="paypal-account">maatmugabo0@gmail.com</button>
+            <p>Thank you in Advance</p>
+        </div>
+    </div>
 
 
     <script>
@@ -185,6 +209,7 @@
             }
         }
     </script>
+    <script src="./app.js"></script>
 </body>
 
 </html>
